--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .category-title{
     color: red;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin: 20px;
+}
+.product-detail
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #88E460;
+    width: 300px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 5px 10px #888888;
+}
+.product-NameAndPrice
+{
+    margin-right: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.product-Name
+{
+    color: #1B2365;
+    font-weight: bold;
+}
+.showMore-btn
+{
+    color: white;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: #00C1FF;
+    border-radius: 20px;
 }
