--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+}
 
 .category-title{
     color: red;
@@ -9,10 +13,12 @@
     font-weight: bolder;
     margin: 20px;
 }
+.productList{
+    display: flex;
+}
 .product-detail
 {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     background-color: #88E460;
     width: 300px;
@@ -41,4 +47,36 @@
     margin-bottom: 5px;
     background-color: #00C1FF;
     border-radius: 20px;
+}
+.ProductPage-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ProductPage
+{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 70px;
+    background-color: #D7F499;
+}
+.text-container{
+    padding: 10px;
+    margin: 10px;
+}
+.text{
+    margin-top: 10px;
+}
+.ProductTitle
+{
+    font-size: 3rem;
+    font-weight: bold;
+    color: #6D418D;
+}
+.ProductDetail
+{
+    font-size: 2rem;
+    color: #418D86;
 }
