--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-size: 10px;
+   
 }
 
 .category-title{
@@ -71,12 +71,27 @@
 }
 .ProductTitle
 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     color: #6D418D;
 }
 .ProductDetail
 {
-    font-size: 2rem;
+    font-size: 1rem;
     color: #418D86;
+}
+.Header
+{
+    display: flex;
+    justify-content: space-between;
+    background-color: #0F21C0;
+    padding: 10px;
+}
+.Link{
+    margin: 10px;
+    color: white;
+    padding: 5px;
+}
+.Link:hover{
+    background-color: #00C1FF;
 }
