--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,11 @@
     padding: 0;
    
 }
-
+.HomePage{
+    width: 100%;
+    height: 100%;
+    
+}
 .category-title{
     color: red;
     font-size: 2.5rem;
@@ -110,4 +114,13 @@
     background-color: #4FE100;
     color: aliceblue;
     margin-top: 100px;
+}
+.cartItem{
+    display: flex;
+    margin: 20px;
+    border: #78E100 2px solid;
+    border-radius: 10px;
+    padding: 10px;
+    justify-content: space-around;
+    align-items: center;
 }
