total price in cart added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,3 +159,11 @@
 .Home-desc{
     padding: 20px;
 }
+.cartUtils{
+    display: flex;
+    justify-content: space-between;
+}
+.totalPrice{
+    padding: 5px;
+    margin: 20px 40px;
+}
