--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,3 +167,34 @@
     padding: 5px;
     margin: 20px 40px;
 }
+.cartLink-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.historyTitle{
+    margin: 20px;
+    font-size: 2rem;
+    color: #0013A1;
+}
+.historyList{
+    margin: 30px;
+    border: #0013A1 2px solid;
+    padding: 20px;
+    border-radius: 20px;
+}
+.historyItems-title{
+    font-size: 1.5rem;
+    margin-left: 40px;
+    color: #00A155;
+}
+.historyItem{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: #4FE100 1px solid;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+}
