--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
     padding: 0;
    
 }
+.headerLinks
+{
+    display: flex;
+    align-items: center;
+}
 .HomePage{
     width: 100%;
     height: 100%;
@@ -215,6 +220,8 @@
 }
 .search-container{
     position: relative;
+    display: flex;
+    align-items: center;
 }
 .SearchResults{
     position: absolute;
@@ -280,4 +287,7 @@
     padding: 5px;
     background-color: #1BC3A2;
     border-radius: 10px;
+}
+textarea {
+  resize: none;
 }
