--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -225,6 +225,7 @@
 }
 .SearchResults{
     position: absolute;
+    margin-top: 130px;
     width: 100%;
 }
 .search-result{
@@ -306,4 +307,5 @@ textarea {
     cursor: pointer;
     width: 100px;
     justify-content: space-between;
+    align-items: center;
 }
